@@ -1,3 +1,13 @@
+2003-10-21  Richard Williamson   <rjw@apple.com>
+
+	Don't use small caps font for characters that don't have an
+	uppercase counterpart (i.e. punctuation marks).
+
+        Reviewed by Hyatt.
+
+        * WebCoreSupport.subproj/WebTextRenderer.m:
+        (widthForNextCharacter):
+
 2003-10-21  Chris Blumenberg  <cblu@apple.com>
 
 	Fixed: <rdar://problem/3176170>: OBJECT tag with no or empty TYPE is mishandled
